# fujprog

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile.bsd  Makefile.gcc  Makefile.linux  Makefile.ming32  Makefile.ming32_64  Makefile.osx  Makefile.win  README.md  ft232r_flash.c  fujprog.c  fujprog.h.in  ujprog.c  ujprog.h.in  ulx2s_prep.sh
.github/workflows/: cmake.yml  codeql-analysis.yml
cmake/: Toolchain-cross-mingw32.cmake  Toolchain-cross-mingw64.cmake  Toolchain-cross-mingw64.make
